# designguide.me-serverless

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  cors.js  messages.js  package-lock.json  package.json  serverless.yml
json_converter/: Cargo.toml
json_converter/src/: lib.rs
messages/: Cargo.toml
messages/src/: lambda_gateway.rs  main.rs
src/: attachments-post.js  cors-options.js  mail-forwarder.js  messages-options.js  messages-post.js
tests/: messages.sh
