[package]
name = "messages"
version = "0.1.0"
authors = ["Patrick Kissling <patrick.kissling@gmx.de>"]
edition = "2018"

[dependencies]
lambda_runtime = "0.2.*"
serde = { version = "1.0.*", features = ["derive"] }
serde_json = "1.0.*"
serde_derive = "1.0.*"
log = "0.4.*"
simple_logger = "1.6.*"
json_converter = { path = "../json_converter" }

